[gd_scene load_steps=5 format=3 uid="uid://dcue4apa6wu8t"]

[ext_resource type="Script" path="res://game.gd" id="1_vb3r8"]
[ext_resource type="PackedScene" uid="uid://bihbipx5ilscp" path="res://car.tscn" id="2_axb3p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g8h5y"]
size = Vector2(2238.5, 403)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tng6c"]
radius = 94.0
height = 188.0

[node name="Game" type="Node2D"]
script = ExtResource("1_vb3r8")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 540)

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Container" type="HBoxContainer" parent="UILayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4

[node name="ColorRect" type="ColorRect" parent="UILayer/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.423529, 0.211765, 0.0627451, 1)

[node name="DebugPanel" type="VBoxContainer" parent="UILayer/Control"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="EnginePower" type="VBoxContainer" parent="UILayer/Control/DebugPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="UILayer/Control/DebugPanel/EnginePower"]
layout_mode = 2
text = "Engine Power"

[node name="EnginePowerSlider" type="HBoxContainer" parent="UILayer/Control/DebugPanel/EnginePower"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4

[node name="HSlider" type="HSlider" parent="UILayer/Control/DebugPanel/EnginePower/EnginePowerSlider"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 4
min_value = 100.0
max_value = 5000.0
value = 100.0

[node name="Label" type="Label" parent="UILayer/Control/DebugPanel/EnginePower/EnginePowerSlider"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "0
"

[node name="TireFriction" type="VBoxContainer" parent="UILayer/Control/DebugPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="UILayer/Control/DebugPanel/TireFriction"]
layout_mode = 2
text = "Tire Friction"

[node name="TireFrictionSlider" type="HBoxContainer" parent="UILayer/Control/DebugPanel/TireFriction"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4

[node name="HSlider" type="HSlider" parent="UILayer/Control/DebugPanel/TireFriction/TireFrictionSlider"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.02
value = 1.0

[node name="Label" type="Label" parent="UILayer/Control/DebugPanel/TireFriction/TireFrictionSlider"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "0
"

[node name="SuspensionStiffness" type="VBoxContainer" parent="UILayer/Control/DebugPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="UILayer/Control/DebugPanel/SuspensionStiffness"]
layout_mode = 2
text = "Suspension Stiffness"

[node name="SuspensionStiffnessSlider" type="HBoxContainer" parent="UILayer/Control/DebugPanel/SuspensionStiffness"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4

[node name="HSlider" type="HSlider" parent="UILayer/Control/DebugPanel/SuspensionStiffness/SuspensionStiffnessSlider"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 4
max_value = 64.0
step = 0.5
value = 1.0

[node name="Label" type="Label" parent="UILayer/Control/DebugPanel/SuspensionStiffness/SuspensionStiffnessSlider"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "0
"

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1043, 940)
shape = SubResource("RectangleShape2D_g8h5y")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(865, 744)
shape = SubResource("CapsuleShape2D_tng6c")

[node name="StaticBody2D3" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D3"]
visible = false
polygon = PackedVector2Array(478, 767, 740, 722, 865, 643, 997, 726, 1239, 740, 880, 866)

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="StaticBody2D3"]
position = Vector2(-863, 11)
polygon = PackedVector2Array(863, 646, 831, 651, 805, 663, 789, 676, 775, 690, 751, 708, 723, 719, 686, 728, 643, 734, 585, 737, 435, 658, 345, 424, 162, 131, -19, -51, -211, 92, -462, 300, -742, -529, -1001, 868, 287, 856, 812, 826, 1025, 808, 1084, 746, 1488, 836, 1761, 746, 2482, 780, 3077, 819, 3355, 502, 6754, 892, 10887, 932, 8010, -599, 7557, -554, 7195, -773, 6793, -1030, 6499, -1112, 6231, -1104, 5812, -790, 5593, -599, 5376, -773, 5144.72, -509.346, 4943, -685, 4732, -531, 4570, -630, 4279, -548, 3806, -619, 3572, -599, 3263, -138, 3011, -96, 2937, 116, 2871, 286, 2774, 371, 2673, 403, 2513, 344, 2378, 340, 2264, 409, 2207, 485, 2135, 537, 2017, 538, 1933, 497, 1861, 474, 1745, 545, 1650, 624, 1568, 674, 1505, 720, 1433, 741, 1220, 736, 1175, 735, 1150, 732, 1108, 730, 1041, 721, 1009, 713, 977, 707, 953, 694, 940, 680, 918, 661, 884, 651)

[node name="Car" parent="." instance=ExtResource("2_axb3p")]
position = Vector2(333, 486)
